# shogi

./: pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: black.yml  build_apk.yml  unit_tests.yml
ci/: docker-compose.yml
shogi/gui/: board.py  field.py  game.py
src/: main.py
src/shogi/gui/: board.py  field.py  game.py
src/tests/test_gui/: conftest.py
tests/test_gui/: test_board.py  test_game.py
